bugfix for mobile: no overflow over page width
This should fix most of the width issues on mobile.

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -43,6 +43,12 @@ table {
 Theme Styles
 *******************************************************************************/
 
+/* prevent horizontal scrolling on mobile */
+html, body {
+  position:relative;
+  overflow-x:hidden;
+}
+
 body {
   box-sizing: border-box;
   color:#373737;
@@ -385,7 +391,6 @@ Small Device Styles
   }
 
   .inner {
-    min-width: 320px;
     max-width: 480px;
   }
 
@@ -433,7 +438,6 @@ Small Device Styles
   }
 
   .inner {
-    min-width: 240px;
     max-width: 320px;
   }
 
